src/objects/Proposed_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Specified_Drug_Product_Name__c</fullName>
        <label>Account Specified Drug Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Medical_Product_Name__c</fullName>
        <label>Account Specified Medical Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Benefit_Request_Form__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Proposed Products</relationshipLabel>
        <relationshipName>Proposed_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BlueVision_Plus_Comments__c</fullName>
        <label>BlueVision Plus Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Rewards__c</fullName>
        <label>Blue Rewards</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type__c</fullName>
        <label>CDH Fund Type</label>
        <picklist>
            <controllingField>CDH__c</controllingField>
            <picklistValues>
                <fullName>BlueFund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compatible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDH_Type__c</fullName>
        <label>CDH Type</label>
        <picklist>
            <controllingField>CDH__c</controllingField>
            <picklistValues>
                <fullName>HRA Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRA Non-Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDH__c</fullName>
        <label>CDH</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom Products require a marked up benefit summary. Please attach the marked up benefit summary as an attachment.</inlineHelpText>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible Options</label>
        <picklist>
            <picklistValues>
                <fullName>Stacked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stacked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Name__c</fullName>
        <label>Dental Product Name</label>
        <picklist>
            <picklistValues>
                <fullName>BlueDental Plus (PPO or 90 fee schedule)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary BlueDental Plus (PPO fee schedule only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred (PPO) Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Dental (coinsurance is same for IN and OON)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Preferred Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Traditional Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Preferred (Medigap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary BlueDental Preferred (Medigap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Traditional (Medigap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary BlueDental Traditional (Medigap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDHMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental HMO (Available ridered to BlueChoice medical products only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freestanding Dental HMO (DHMO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental HMO Opt-Out (Available ridered to BlueChoice medical products only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Dental</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Options__c</fullName>
        <label>Dental Product Options</label>
        <picklist>
            <controllingField>Dental_Product_Name__c</controllingField>
            <picklistValues>
                <fullName>Plan 1 (100/80/80/50 IN and 100/80/80/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50 IN and 80/60/60/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 3 (100/80/50/50 IN and 100/80/50/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 4 (100/80/50/50 IN and 80/60/35/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 5 (100/80/80/50 IN and 100/80/80/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 6 (100/80/80/50 IN and 80/60/60/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 7 (100/80/50/50 IN and 100/80/50/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 8 (100/80/50/50 IN and 80/60/35/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (100/80/0/0 IN and 80/60/0/0 OON) - $1,000 max, $25 deductible and no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (80/50/50/50/50 IN and 60/35/35/35/35 OON)- $1,000 max, $25 deductible and $800 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (80/50/50/50 IN and 60/35/35/35 OON) - $1,500 max, $0 deductible and no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $25 deductible and $800/$1,000/$1,200/$1,500  ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $0 deductible and $800/$1,000 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $0 deductible and $800 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 3  (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,500 max, $25 deductible and $800/$1,500  ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,500 max, $25 deductible and $1,000/$1,500  ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $0 deductible and $1,000 ortho max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 5 (100/90/60/60/50 IN and 80/80/50/50/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $25 deductible and $800 ortho max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $50 deductible and $1,000 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 1 (80/50/50/50/50) - $1,500 max, $50 deductible and $1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $25 deductible and $800/$1,000/$1,200/$1,500 ortho max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan 2 (100/80/80/50/50) -  $1,500 max, $50 deductible and $1,000</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dental_Variables_by_Product__c</fullName>
        <label>Dental Variables by Product</label>
        <picklist>
            <controllingField>Dental_Product_Name__c</controllingField>
            <picklistValues>
                <fullName>Deductible Applies to All Basic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Maximum Applies to All Basic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive &amp; Diagnostic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deductible Applies to All Basic and Major Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Maximum Applies to All Basic and Major Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Services and Major Services - Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Services - Restorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Deductible and Maximum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Services - Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthodontic Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Product_Options__c</fullName>
        <label>Drug Product Options</label>
        <picklist>
            <controllingField>Medical_Product_Name__c</controllingField>
            <picklistValues>
                <fullName>Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2: $8/$15/$30 w/ $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4: $10/$20/$35 w/ $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4: $8/$15/$30 w/ $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 7: $10/$20/$35 w/ $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 8: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 12: $10/$25/$45/50% w/ $75 max and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 15: $10/$25/$45/50% w/ $75 max and $100 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 18: $10/$25/$45/50% w/ $75 max and $200 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 21: $15/$35/$60/50% w/ $100 max and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 24: $15/$35/$60/50% w/ $100 max and $100 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 27: $15/$35/$60/50% w/ $100 max and $200 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$35/$60/50% w/ $100 maximum and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$35/$60/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$8/$15/$35/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible ($0 select generics not subject to deductible)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$35/$60/50% w/ $150 maximum and $500 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$35/$60/50% w/ $150 maximum and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$35/$60/50% w/ $150 maximum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0/$50/$75/50% w/ $150 maximum and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10/$30/$60/50% w/ $150 maximum and $0 deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15/$45/$70/50% w/ $150 maximum and $0 deductible</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Arrangement__c</fullName>
        <label>Employer Arrangement</label>
        <picklist>
            <picklistValues>
                <fullName>Employer Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Fund_Type__c</fullName>
        <label>Exchange CDH Fund Type</label>
        <picklist>
            <picklistValues>
                <fullName>BlueFund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compatible</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Type__c</fullName>
        <label>Exchange CDH Type</label>
        <picklist>
            <picklistValues>
                <fullName>HSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Package_Option__c</fullName>
        <label>Exchange Package Option</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Exclusive_Specialty_Provider_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Exclusive Specialty Provider  Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Health_Care_Card__c</fullName>
        <formula>Benefit_Request_Form__r.ExtraCare_Health_Care_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Extra Health Care_Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSA_BlueFund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Formulary__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Formulary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <inlineHelpText>This field is prepopulated when the BRF funding arrangement is of type ASO/Risk</inlineHelpText>
        <label>Funding Arrangement</label>
        <picklist>
            <picklistValues>
                <fullName>ASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>Grandfathered PPACA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Status__c</fullName>
        <label>Grandfathered Status</label>
        <picklist>
            <picklistValues>
                <fullName>Grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_Care_Out_Vendor__c</fullName>
        <formula>TEXT(    Related_Medical_Product__r.Integrated_Carved_Out_Vendor__c    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Care Out Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Carved_Out_Vendor__c</fullName>
        <label>Integrated - Carved-Out Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>CVS (Direct)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Requires Approval</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles_and_OOPs1__c</fullName>
        <formula>IF(ISPICKVAL( Related_Medical_Product__r.Integrated_Non_Integrated__c ,&apos;Integrated&apos;),&apos;Yes&apos;,IF(ISPICKVAL( Related_Medical_Product__r.Integrated_Non_Integrated__c ,&apos;Non-Integrated&apos;),&apos;No&apos;,Null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Deductibles and OOPs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles_and_OOPs__c</fullName>
        <label>Integrated Deductibles and OOPs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_Non_Integrated__c</fullName>
        <label>RX Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated - Carved-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Comments__c</fullName>
        <label>MHP Test Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MHP Test Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Completed_Date__c</fullName>
        <label>MHP Test Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Result__c</fullName>
        <label>MHP Test Result</label>
        <picklist>
            <controllingField>Funding_Arrangement__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choic_Comments__c</fullName>
        <label>Maintenance Choice Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choice__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Maintenance_Choice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Maintenance Choice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Comments__c</fullName>
        <label>Medical Plan Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Product_Name__c</fullName>
        <label>Medical Product Name</label>
        <picklist>
            <picklistValues>
                <fullName>BlueChoice HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice HMO Open Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Open Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Plus Open Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluePreferred PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice HMO Open Access HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice HMO Open Access HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice HMO Open Access HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice HMO Open Access High Deductible Health Plan Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Plus Open Access HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Plus Open Access HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Plus Open Access HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Opt-Out Plus Open Access High Deductible Health Plan Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Advantage HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Advantage HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueChoice Advantage HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluePreferred HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluePreferred HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluePreferred HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluePreferred Integrated High Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue HMO Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue HMO HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue HMO HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue HMO HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue 2.0 Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue 2.0 HRA Non-Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue 2.0 HSA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue 2.0 HRA Integrated Deductible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthyBlue Advantage Non-Integrated Deductible</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>